#2001516 by jgullstr: fix Collapsed fieldsets disappear in vertical tabs.

--- a/css/vertical-tabs.css
+++ b/css/vertical-tabs.css
@@ -69,7 +69,7 @@ div.vertical-tabs .vertical-tabs-panes {
   margin: 0 0 0 265px; /* LTR */
   padding: 10px 15px 10px 0; /* LTR */
 }
-div.vertical-tabs .vertical-tabs-panes legend {
+div.vertical-tabs fieldset.vertical-tabs-pane > legend {
   display: none;
 }
 .vertical-tabs-pane .fieldset-wrapper > div:first-child {
